--- a/package.json
+++ b/package.json
@@ -6,14 +6,28 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/cookie": "^0.4.0",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/use-deep-compare-effect": "^1.5.1",
+    "@types/uuid": "^8.3.0",
+    "antd": "^4.19.5",
+    "camelcase-keys": "^6.1.1",
+    "cookie": "^0.4.1",
+    "eslint": "^7.25.0",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "snakecase-keys": "^3.1.1",
     "typescript": "^4.4.2",
+    "use-deep-compare-effect": "^1.6.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -39,5 +53,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "http-proxy-middleware": "^1.3.1",
+    "prettier": "^2.2.1"
   }
 }
