--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.168",
     "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "@types/use-deep-compare-effect": "^1.5.1",
     "@types/uuid": "^8.3.0",
     "antd": "^4.19.5",
@@ -20,11 +21,12 @@
     "cookie": "^0.4.1",
     "eslint": "^7.25.0",
     "lodash": "^4.17.21",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "snakecase-keys": "^3.1.1",
+    "styled-components": "^5.2.3",
     "typescript": "^4.4.2",
     "use-deep-compare-effect": "^1.6.1",
     "uuid": "^8.3.2",
