--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/cookie": "^0.4.0",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.168",
+    "@types/object-hash": "^2.2.0",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
@@ -30,7 +31,8 @@
     "typescript": "^4.4.2",
     "use-deep-compare-effect": "^1.6.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "object-hash": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
