--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/styled-components": "^5.1.9",
     "@types/use-deep-compare-effect": "^1.5.1",
     "@types/uuid": "^8.3.0",
+    "@types/echarts": "^4.9.13",
     "antd": "^4.19.5",
     "camelcase-keys": "^6.1.1",
     "cookie": "^0.4.1",
     "eslint": "^7.25.0",
+    "echarts": "^5.3.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
