--- a/package.json
+++ b/package.json
@@ -3,27 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/cookie": "^0.4.0",
+    "@types/echarts": "^4.9.13",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.168",
-    "@types/object-hash": "^2.2.0",
     "@types/node": "^16.7.13",
+    "@types/object-hash": "^2.2.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@types/use-deep-compare-effect": "^1.5.1",
     "@types/uuid": "^8.3.0",
-    "@types/echarts": "^4.9.13",
     "antd": "^4.19.5",
     "camelcase-keys": "^6.1.1",
     "cookie": "^0.4.1",
-    "eslint": "^7.25.0",
     "echarts": "^5.3.2",
+    "eslint": "^7.25.0",
     "lodash": "^4.17.21",
+    "object-hash": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -33,8 +35,7 @@
     "typescript": "^4.4.2",
     "use-deep-compare-effect": "^1.6.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.0",
-    "object-hash": "^2.2.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
